icon-container: use a threshold to start scrolling while rubberbanding

This allows us to scroll while rubberbanding when the window is maximized and
thus the pointer can't possibly leave the widget area.

https://bugzilla.gnome.org/show_bug.cgi?id=665383